Fixed missing margin for post detail page

--- a/src/app/post-detail/post-detail.component.scss
+++ b/src/app/post-detail/post-detail.component.scss
@@ -26,8 +26,5 @@
     p {
       margin: 0 0 30px 0;
     }
-    p:last-child {
-      margin: 0;
-    }
   }
 }
